--- a/knockback_calc.ipynb
+++ b/knockback_calc.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,23 +19,23 @@
     "import os\n",
     "import math\n",
     "\n",
-    "json_path = 'r2data_patch_1000.json' # REPLACE WITH YOUR OWN PATH. MAKE SURE NO BACKSLASHES.\n",
+    "json_path = 'r2data_patch_120.json' # REPLACE WITH YOUR OWN PATH. MAKE SURE NO BACKSLASHES.\n",
     "\n",
     "char_data = json.load(open(json_path, 'r'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "26.787692307692303"
+       "51.92457692307693"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,22 +43,258 @@
    "source": [
     "# Knockback Simulator\n",
     "\n",
-    "base_kb = 6\n",
-    "scaled_kb = 0.85\n",
-    "weight = 95\n",
-    "p = 20 + 8\n",
-    "initial_kb = 3 * (base_kb + scaled_kb * 0.12 * p * (200 / (weight + 100)))\n",
+    "opp = \"Zetterburn\"\n",
+    "# move = [\"Olympia\", \"Uspecial\", \"Final\"]\n",
+    "move = [\"Olympia\", \"Fair\", \"Normal\"]\n",
     "\n",
-    "hitstun_gravity = 1.4\n",
+    "base_kb = char_data[move[0]][move[1]][\"KBs\"][move[2]][\"base_kb\"]\n",
+    "scaled_kb = char_data[move[0]][move[1]][\"KBs\"][move[2]][\"kb_scale\"]\n",
+    "weight = char_data[opp]['Stats']['Weight']\n",
+    "def initial_kb(p):\n",
+    "    \n",
+    "    return 3 * (base_kb + scaled_kb * 0.120125 * (p + char_data[move[0]][move[1]][\"KBs\"][move[2]][\"damage\"]) * (200 / (weight + 100)))\n",
+    "\n",
+    "def hs(p):\n",
+    "    return math.floor(initial_kb(p) * (4.07/3) * hitstun_multi)\n",
+    "def split_component(kb, angle):\n",
+    "    return [math.cos(angle) * kb, math.sin(angle) * kb]\n",
+    "\n",
+    "\n",
+    "hitstun_gravity = char_data[opp]['Stats']['HitstunGravity']\n",
     "hitstun_gravity_jerk_frames = 5\n",
-    "hitstun_multi = 1.0\n",
-    "hitstun_frames = math.floor(initial_kb * (4.07/3) * hitstun_multi*.92)\n",
-    "max_fall_speed = 28\n",
+    "hitstun_multi = char_data[move[0]][move[1]][\"KBs\"][move[2]]['hitstun']\n",
+    "max_fall_speed = char_data[opp]['Stats']['FallSpeedMax']\n",
     "\n",
-    "original_angle = 320\n",
-    "angle = original_angle * 2 * math.pi / 360\n",
+    "# Only works on angles between 0 and 180.\n",
+    "def perfect_down_di(angle):\n",
+    "    if angle > 90 and angle <= 180:\n",
+    "        return angle + 18\n",
+    "    if angle > 0 and angle <= 90:\n",
+    "        return angle - 18\n",
     "\n",
-    "initial_kb"
+    "def di_down(angle):\n",
+    "    if angle <= 22 and angle >= -22:\n",
+    "        return angle - 18\n",
+    "    if angle >= 202 and angle <= 158:\n",
+    "        return angle + 18\n",
+    "\n",
+    "    if angle >= 0 and angle <= 90:\n",
+    "        return angle - (270 - angle - 180) / 90 * 18\n",
+    "    if angle > 90 and angle <= 180:\n",
+    "        return angle + (angle + 180 - 270) / 90 * 18\n",
+    "    \n",
+    "original_angle = char_data[move[0]][move[1]][\"KBs\"][move[2]]['angle']\n",
+    "angle = [original_angle * 2 * math.pi / 360, (di_down(original_angle)) * 2 * math.pi / 360, perfect_down_di(original_angle) * 2 * math.pi / 360]\n",
+    "\n",
+    "\n",
+    "initial_kb(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "117.4511346153846"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opp = \"Zetterburn\"\n",
+    "# move = [\"Olympia\", \"Uspecial\", \"Final\"]\n",
+    "move = [\"Olympia\", \"Uspecial\", \"Final\"]\n",
+    "\n",
+    "base_kb = char_data[move[0]][move[1]][\"KBs\"][move[2]][\"base_kb\"]\n",
+    "scaled_kb = char_data[move[0]][move[1]][\"KBs\"][move[2]][\"kb_scale\"]\n",
+    "weight = char_data[opp]['Stats']['Weight']\n",
+    "initial_kb(300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "118.45534615384615"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opp = \"Zetterburn\"\n",
+    "# move = [\"Olympia\", \"Uspecial\", \"Final\"]\n",
+    "move = [\"Olympia\", \"Fair\", \"Normal\"]\n",
+    "\n",
+    "base_kb = char_data[move[0]][move[1]][\"KBs\"][move[2]][\"base_kb\"]\n",
+    "scaled_kb = char_data[move[0]][move[1]][\"KBs\"][move[2]][\"kb_scale\"]\n",
+    "weight = char_data[opp]['Stats']['Weight']\n",
+    "initial_kb(300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9.861533279694314, 22.14936639327368]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "split_component(initial_kb(0) - 0.54, angle[1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[19.966103378546947, 25.555446946873126]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "split_component(initial_kb(22) - 0.54 * 1, angle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.782608695652174"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "18/23"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = list()\n",
+    "base_kb = 6\n",
+    "scaled_kb = 0.6\n",
+    "p = 4\n",
+    "prev_hs = hs(0+p)\n",
+    "for a in range(0,200):\n",
+    "    if hs(a+p) > prev_hs:\n",
+    "        x.append( a)\n",
+    "        prev_hs = hs(a+p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "5\n",
+      "8\n",
+      "12\n",
+      "15\n",
+      "19\n",
+      "22\n",
+      "25\n",
+      "29\n",
+      "32\n",
+      "36\n",
+      "39\n",
+      "42\n",
+      "46\n",
+      "49\n",
+      "53\n",
+      "56\n",
+      "60\n",
+      "63\n",
+      "66\n",
+      "70\n",
+      "73\n",
+      "77\n",
+      "80\n",
+      "83\n",
+      "87\n",
+      "90\n",
+      "94\n",
+      "97\n",
+      "100\n",
+      "104\n",
+      "107\n",
+      "111\n",
+      "114\n",
+      "118\n",
+      "121\n",
+      "124\n",
+      "128\n",
+      "131\n",
+      "135\n",
+      "138\n",
+      "141\n",
+      "145\n",
+      "148\n",
+      "152\n",
+      "155\n",
+      "159\n",
+      "162\n",
+      "165\n",
+      "169\n",
+      "172\n",
+      "176\n",
+      "179\n",
+      "182\n",
+      "186\n",
+      "189\n",
+      "193\n",
+      "196\n",
+      "199\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in x:\n",
+    "    print(i)"
    ]
   },
   {
@@ -579,6 +815,72 @@
     "    max_height = max(max_height, y_pos)\n",
     "    frame += 1\n",
     "print(\"{:.3f}\".format(max_height))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "635.1175010000001"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pow(22.501,2) + pow(11.35,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['AetherianForest',\n",
+       " 'AirArmada',\n",
+       " 'FireCapital',\n",
+       " 'ForestUnderstory',\n",
+       " 'GodaiDelta',\n",
+       " 'Hodojo',\n",
+       " 'HyperboreanHarbor',\n",
+       " 'Julesvale',\n",
+       " 'MerchantPort',\n",
+       " 'RockWall',\n",
+       " 'StormsweptPillar',\n",
+       " 'TempestPeak',\n",
+       " 'TrainingRoom']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "platform_heights = {\n",
+    "'GodaiDelta': [240.0],\n",
+    "'AetherianForest': [250.0],\n",
+    "'ForestUnderstory': [250.0],\n",
+    "'FireCapital': [250.0, 500.0],\n",
+    "'RockWall': [260.0, 520.0],\n",
+    "'Hodojo': [260.0, 520.0],\n",
+    "'HyperboreanHarbor': [270.0, 320.0],\n",
+    "'Julesvale': [270.0, 540.0],\n",
+    "'MerchantPort': [280.0, 480.0],\n",
+    "'AirArmada': [300.0],\n",
+    "'TempestPeak': [305.0],\n",
+    "'StormsweptPillar': [325.0],\n",
+    "}\n",
+    "platform_heights"
    ]
   },
   {
