--- a/wiki_mind_reader.ipynb
+++ b/wiki_mind_reader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,14 @@
     "import math\n",
     "\n",
     "conversion_path = 'wiki_conversion.csv'\n",
-    "patch_path = 'r2data_patch_113.json' # Make sure to change this line with a new patch update!\n",
+    "patch_path = 'r2data_patch_120.json' # Make sure to change this line with a new patch update!\n",
     "reader = 'readerscript.txt'\n",
     "writer = 'writerscript.txt'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
     "    strung += '| reverseHitFlag                 = ' + str(v['reverse_flag']) + '\\n'\n",
     "    strung += '| forceFlinchFlag                = ' + str(v['force_flinch']) + '\\n'\n",
     "    strung += '| groundTechableFlag             = ' + str(v['ground_techable']) + '\\n'\n",
-    "    strung += '| breakProjectileFlag            = ' + str(v['breaks_projectiles']) + '\\n'\n",
+    "    strung += '| breakProjectileFlag            = ' + str(v['projectile_interaction']) + '\\n'\n",
     "    strung += '| weightIndependentFlag          = ' + str(v['weight_independent']) + '\\n'\n",
     "    strung += '| knockbackFlipper               = ' + str(v['kb_flipper']) + '\\n'\n",
     "    strung += '| hitstunMulti                   = ' + str(v['hitstun']) + '\\n'\n",
@@ -196,68 +196,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'char': 'Orcane', 'atk': 'Jab', 'hit': 'Jab 1'}\n",
-      "{'char': 'Orcane', 'atk': 'Jab', 'hit': 'Jab 2'}\n",
-      "{'char': 'Orcane', 'atk': 'Jab', 'hit': 'Jab 3'}\n",
-      "{'char': 'Orcane', 'atk': 'Up Tilt', 'hit': 'Sweet'}\n",
-      "{'char': 'Orcane', 'atk': 'Up Tilt', 'hit': 'Sour'}\n",
-      "{'char': 'Orcane', 'atk': 'Forward Tilt', 'hit': 'Ftilt'}\n",
-      "{'char': 'Orcane', 'atk': 'Down Tilt', 'hit': 'Sweet'}\n",
-      "{'char': 'Orcane', 'atk': 'Down Tilt', 'hit': 'Sour'}\n",
-      "{'char': 'Orcane', 'atk': 'Dash Attack', 'hit': 'Early'}\n",
-      "{'char': 'Orcane', 'atk': 'Dash Attack', 'hit': 'Late'}\n",
-      "{'char': 'Orcane', 'atk': 'Up Strong', 'hit': 'Normal Sweet'}\n",
-      "{'char': 'Orcane', 'atk': 'Up Strong', 'hit': 'Normal Sour'}\n",
-      "{'char': 'Orcane', 'atk': 'Up Strong (Puddle)', 'hit': 'Puddle Sweet'}\n",
-      "{'char': 'Orcane', 'atk': 'Up Strong (Puddle)', 'hit': 'Puddle Sour'}\n",
-      "{'char': 'Orcane', 'atk': 'Forward Strong', 'hit': 'Normal'}\n",
-      "{'char': 'Orcane', 'atk': 'Forward Strong (Puddle)', 'hit': 'Puddle'}\n",
-      "{'char': 'Orcane', 'atk': 'Down Strong', 'hit': 'Normal'}\n",
-      "{'char': 'Orcane', 'atk': 'Down Strong (Puddle)', 'hit': 'Puddle'}\n",
-      "{'char': 'Orcane', 'atk': 'Neutral Air', 'hit': 'Sweetspot'}\n",
-      "{'char': 'Orcane', 'atk': 'Neutral Air', 'hit': 'Sourspot'}\n",
-      "{'char': 'Orcane', 'atk': 'Neutral Air', 'hit': 'Bounce (Sweet)'}\n",
-      "{'char': 'Orcane', 'atk': 'Neutral Air', 'hit': 'Bounce (Sour)'}\n",
-      "{'char': 'Orcane', 'atk': 'Up Air', 'hit': 'Water Sweet'}\n",
-      "{'char': 'Orcane', 'atk': 'Up Air', 'hit': 'Water Sour'}\n",
-      "{'char': 'Orcane', 'atk': 'Up Air', 'hit': 'Belly'}\n",
-      "{'char': 'Orcane', 'atk': 'Down Air', 'hit': 'Dair'}\n",
-      "{'char': 'Orcane', 'atk': 'Forward Air', 'hit': 'Strong (Fast)'}\n",
-      "{'char': 'Orcane', 'atk': 'Forward Air', 'hit': 'Weak (Medium)'}\n",
-      "{'char': 'Orcane', 'atk': 'Forward Air', 'hit': 'Bubble'}\n",
-      "{'char': 'Orcane', 'atk': 'Back Air', 'hit': 'Sour'}\n",
-      "{'char': 'Orcane', 'atk': 'Back Air', 'hit': 'Sweet'}\n",
-      "{'char': 'Orcane', 'atk': 'Pummel', 'hit': 'Pummel'}\n",
-      "{'char': 'Orcane', 'atk': 'Special Pummel', 'hit': 'Create Puddle'}\n",
-      "{'char': 'Orcane', 'atk': 'Special Pummel', 'hit': 'Teleport to Puddle'}\n",
-      "{'char': 'Orcane', 'atk': 'Forward Throw', 'hit': 'Normal'}\n",
-      "{'char': 'Orcane', 'atk': 'Forward Throw (Puddle)', 'hit': 'Empowered'}\n",
-      "{'char': 'Orcane', 'atk': 'Back Throw', 'hit': 'Bthrow'}\n",
-      "{'char': 'Orcane', 'atk': 'Up Throw', 'hit': 'Throw'}\n",
-      "{'char': 'Orcane', 'atk': 'Up Throw', 'hit': 'Bubbles'}\n",
-      "{'char': 'Orcane', 'atk': 'Down Throw', 'hit': 'Dthrow'}\n",
-      "{'char': 'Orcane', 'atk': 'Neutral Special', 'hit': 'Droplet'}\n",
-      "{'char': 'Orcane', 'atk': 'Forward Special', 'hit': 'Normal'}\n",
-      "{'char': 'Orcane', 'atk': 'Forward Special', 'hit': 'Puddle'}\n",
-      "{'char': 'Orcane', 'atk': 'Up Special', 'hit': 'Sweetspot'}\n",
-      "{'char': 'Orcane', 'atk': 'Up Special', 'hit': 'Sourspot'}\n",
-      "{'char': 'Orcane', 'atk': 'Up Special (Air)', 'hit': 'Sweetspot'}\n",
-      "{'char': 'Orcane', 'atk': 'Up Special (Air)', 'hit': 'Sourspot'}\n",
-      "{'char': 'Orcane', 'atk': 'Down Special', 'hit': 'Droplet'}\n",
-      "{'char': 'Orcane', 'atk': 'Down Special', 'hit': 'Bubbles'}\n",
-      "{'char': 'Orcane', 'atk': 'Ledge Attack', 'hit': 'Hit 1'}\n",
-      "{'char': 'Orcane', 'atk': 'Ledge Attack', 'hit': 'Hit 2'}\n",
-      "{'char': 'Orcane', 'atk': 'Ledge Special', 'hit': 'Multihit'}\n",
-      "{'char': 'Orcane', 'atk': 'Ledge Special', 'hit': 'Final'}\n",
-      "{'char': 'Orcane', 'atk': 'Getup Attack', 'hit': 'Gattack'}\n",
-      "{'char': 'Orcane', 'atk': 'Getup Special', 'hit': 'Gspecial'}\n"
+      "{'char': 'Olympia', 'atk': 'Jab', 'hit': 'Jab 1'}\n",
+      "{'char': 'Olympia', 'atk': 'Jab', 'hit': 'Jab 2'}\n",
+      "{'char': 'Olympia', 'atk': 'Jab', 'hit': 'Jab 3'}\n",
+      "{'char': 'Olympia', 'atk': 'Forward Tilt', 'hit': 'Ftilt'}\n",
+      "{'char': 'Olympia', 'atk': 'Up Tilt', 'hit': 'Early'}\n",
+      "{'char': 'Olympia', 'atk': 'Up Tilt', 'hit': 'Late'}\n",
+      "{'char': 'Olympia', 'atk': 'Up Tilt', 'hit': 'Stomp'}\n",
+      "{'char': 'Olympia', 'atk': 'Down Tilt', 'hit': 'Dtilt'}\n",
+      "{'char': 'Olympia', 'atk': 'Dash Attack', 'hit': 'Hit 1'}\n",
+      "{'char': 'Olympia', 'atk': 'Dash Attack', 'hit': 'Hit 2'}\n",
+      "{'char': 'Olympia', 'atk': 'Forward Strong', 'hit': 'Early'}\n",
+      "{'char': 'Olympia', 'atk': 'Forward Strong', 'hit': 'Late'}\n",
+      "{'char': 'Olympia', 'atk': 'Up Strong', 'hit': 'Hit 1'}\n",
+      "{'char': 'Olympia', 'atk': 'Up Strong', 'hit': 'Hit 2'}\n",
+      "{'char': 'Olympia', 'atk': 'Down Strong', 'hit': 'Hit 1'}\n",
+      "{'char': 'Olympia', 'atk': 'Down Strong', 'hit': 'Hit 2'}\n",
+      "{'char': 'Olympia', 'atk': 'Neutral Air', 'hit': 'Hit 1'}\n",
+      "{'char': 'Olympia', 'atk': 'Neutral Air', 'hit': 'Hit 2'}\n",
+      "{'char': 'Olympia', 'atk': 'Forward Air', 'hit': 'Normal'}\n",
+      "{'char': 'Olympia', 'atk': 'Forward Air', 'hit': 'Spike'}\n",
+      "{'char': 'Olympia', 'atk': 'Back Air', 'hit': 'Early'}\n",
+      "{'char': 'Olympia', 'atk': 'Back Air', 'hit': 'Late'}\n",
+      "{'char': 'Olympia', 'atk': 'Down Air', 'hit': 'Sweet'}\n",
+      "{'char': 'Olympia', 'atk': 'Down Air', 'hit': 'Sour'}\n",
+      "{'char': 'Olympia', 'atk': 'Up Air', 'hit': 'Early'}\n",
+      "{'char': 'Olympia', 'atk': 'Up Air', 'hit': 'Mid'}\n",
+      "{'char': 'Olympia', 'atk': 'Up Air', 'hit': 'Late'}\n",
+      "{'char': 'Olympia', 'atk': 'Neutral Special (Gem Toss)', 'hit': 'Projectile'}\n",
+      "{'char': 'Olympia', 'atk': 'Neutral Special (Pop)', 'hit': 'Field Break'}\n",
+      "{'char': 'Olympia', 'atk': 'Neutral Special (Pop)', 'hit': 'Crystalized Pop'}\n"
      ]
     }
    ],
