made some more tweaks

--- a/patch_making.ipynb
+++ b/patch_making.ipynb
@@ -17,11 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This cell should be ran to load the functions, but requires no editing.\n",
+    "# Run this cell for function loading. No need for editing.\n",
     "import os\n",
     "\n",
     "def give_throw(move_id, throw, number):\n",
@@ -170,11 +170,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This cell should be ran to load the functions, but requires no editing.\n",
+    "# Run this cell for function loading. No need for editing.\n",
     "def print_wiki_hits(char):\n",
     "    char_data[char] = dict()\n",
     "    stats = dict()\n",
@@ -1341,12 +1341,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This generates a CSV of all the character traits necessary.\n",
-    "\n",
+    "# Run this cell for function loading. No need for editing.\n",
     "import pandas as pd\n",
     "char_data = dict()\n",
     "\n",
@@ -1432,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1498,12 +1497,14 @@
     }
    ],
    "source": [
-    "print_stats('Wrastor')"
+    "# This cell will print out whatever character stats are needed for the relevant character.\n",
+    "char = 'Wrastor'\n",
+    "print_stats(char)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1979,7 +1980,8 @@
     }
    ],
    "source": [
-    "# This is for creating the patch's JSON file. Good for exporting files. This is currently required to get a base template for automating a first production for the base MoveMode templates for new characters.\n",
+    "# This is for creating the patch's JSON file. Good for exporting files, though will reduce context for certain moves and remove otherwise useful info to know like hitbox priorities, etc. This is currently required to get a base template for automating a first production for the base MoveMode templates for new characters.\n",
+    "# This should be ran, but does not need editing. Only needs to be ran if the onward cells are being ran.\n",
     "\n",
     "char_data = dict()\n",
     "\n",
@@ -2236,7 +2238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -7336,8 +7338,7 @@
     }
    ],
    "source": [
-    "# RUN THIS CELL TO GET CHARACTER DATA\n",
-    "# This should primarily be for viewing frame data and determining the timing on frames.\n",
+    "# This cell is to be ran for generating Move Mode data for the wiki. Only really relevant for new characters.\n",
     "\n",
     "forest_list = ['Jab', 'Ftilt', 'Utilt', 'Dtilt', 'Dattack', 'Fstrong', 'Ustrong', 'Dstrong', 'Nair', 'Fair', 'Bair', 'Dair', 'Uair', 'Nspecial', 'Fspecial', 'Uspecial', 'Dspecial', 'Grab', 'DashGrab', 'PivotGrab', 'GetupAttack', 'GetupSpecial', 'LedgeAttack', 'LedgeSpecial', 'Uthrow', 'Dthrow', 'Bthrow', 'Fthrow', 'Pummel', 'PummelSpecial',]\n",
     "\n",
@@ -7519,7 +7520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -11940,8 +11941,7 @@
     }
    ],
    "source": [
-    "# RUN THIS CELL TO GET CHARACTER DATA\n",
-    "# This should primarily be for viewing frame data and determining the timing on frames.\n",
+    "# This cell should be ran to generate human-interpretable information on frame data. Can behave weirdly with loops or otherwise funky moves.\n",
     "\n",
     "forest_list = ['Jab', 'Ftilt', 'Utilt', 'Dtilt', 'Dattack', 'Fstrong', 'Ustrong', 'Dstrong', 'Nair', 'Fair', 'Bair', 'Dair', 'Uair', 'Nspecial', 'Fspecial', 'Uspecial', 'Dspecial', 'Grab', 'DashGrab', 'PivotGrab', 'GetupAttack', 'GetupSpecial', 'LedgeAttack', 'LedgeSpecial', 'Uthrow', 'Dthrow', 'Bthrow', 'Fthrow', 'Pummel', 'PummelSpecial',]\n",
     "\n",
